--- a/webApp/src/app/navbar/navbar.component.html
+++ b/webApp/src/app/navbar/navbar.component.html
@@ -9,6 +9,7 @@
             <li><a routerLink="/contact">Contact</a></li>
             <li><a routerLink="/search">Search</a></li>
             <li><a routerLink="/login">Login</a></li>
+            <li><a routerLink="/register">Login</a></li>
         </ul>
     </div>
 </nav>
